--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,65 @@
-amqp==5.0.9
-asgiref==3.4.1
-backports.entry-points-selectable==1.1.0
-billiard==3.6.4.0
-calendar-base==0.0.1
-celery==5.2.3
-certifi==2021.10.8
-charset-normalizer==2.0.9
-click==8.0.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.4
-Deprecated==1.2.13
-distlib==0.3.2
-Django==3.2.9
-django-bower==5.2.0
-django-cacheops==6.0
-django-debug-toolbar==3.2.4
-django-email-users==1.1.0
-django-filter==21.1
-django-model-utils==4.2.0
-django-notifications-hq==1.6.0
-django-scheduler==0.9.5
-djangorestframework==3.13.1
-djongo==1.3.6
-dnspython==2.1.0
-environ==1.0
-filelock==3.0.12
-firebase==3.0.1
-funcy==1.17
-google-calendar-interface==0.0.2
-icalendar==4.0.9
-idna==3.3
-jsonfield==3.1.0
-kombu==5.2.3
-lazy-object-proxy==1.6.0
-mongoengine==0.23.1
-mysqlclient==2.1.0
-packaging==21.3
-Pillow==8.4.0
-pipenv==2022.1.8
-pipfile==0.0.2
-platformdirs==2.2.0
-prompt-toolkit==3.0.24
-pymongo==3.12.3
-pyparsing==2.4.7
-python-dateutil==2.8.2
-pytz==2021.3
-redis==4.1.0
-requests==2.26.0
-reverse==0.1.0
-shell==1.0.1
-six==1.16.0
-sqlparse==0.2.4
-swapper==1.3.0
-toml==0.10.2
-tomli==1.0.4
-urllib3==1.26.7
-vine==5.0.0
-virtualenv==20.7.0
-virtualenv-clone==0.5.7
-virtualenvwrapper-win==1.2.7
-wcwidth==0.2.5
-wrapt==1.12.1
+amqp
+asgiref
+backports.entry-points-selectable
+billiard
+calendar-base
+celery
+certifi
+charset-normalizer
+click
+click-didyoumean
+click-plugins
+click-repl
+colorama
+Deprecated
+distlib
+Django
+django-bower
+django-cacheops
+django-debug-toolbar
+django-email-users
+django-filter
+django-model-utils
+django-notifications-hq
+django-scheduler
+djangorestframework
+djongo
+dnspython
+environ
+filelock
+firebase
+funcy
+google-calendar-interface
+icalendar
+idna
+jsonfield
+kombu
+lazy-object-proxy
+mongoengine
+mysqlclient
+packaging
+Pillow
+pipenv
+pipfile
+platformdirs
+prompt-toolkit
+pymongo
+pyparsing
+python-da4.7teutil
+pytz
+redis
+requests
+reverse
+shell
+six
+sqlparse
+swapper
+toml
+tomli
+urllib3
+vine
+virtualenv
+virtualenv-clone
+virtualenvwrapper-win
+wcwidth
+wrapt
